--- a/Requests-and-File-upload/public/index.html
+++ b/Requests-and-File-upload/public/index.html
@@ -34,7 +34,7 @@
           </div>
           <button type="submit" class="block submit-btn">submit</button>
         </form>
-        <div class="result"></div>
+        <div class="res"></div>
       </section>
     </main>
     <script
@@ -48,13 +48,20 @@
         e.preventDefault();
         // pass as form data -- use with multer
         let formData = new FormData(formm);
+        let va = [...formData.entries()];
+        console.log(va);
         const options = {
           method: "POST",
           body: formData,
         };
         const data = await fetch("/api", options);
         const json = await data.json();
-        console.log(json);
+        console.log(json.name);
+
+        //putting to html
+        const result = document.querySelector(".res");
+        result.innerHTML = `<h4>${json.name}</h4>`;
+        // result.style.backgroundColor = "blue";
 
         // pass as form json -- use with json parse
         const plainFormData = Object.fromEntries(formData.entries());
